cmake_minimum_required(VERSION 3.22)
project(cpp)
set(CMAKE_CXX_STANDARD 14)
add_executable(main.cpp main.cpp)

add_executable(divide.cpp other/divide.cpp)
add_executable(echo_args.cpp other/echo_args.cpp)
add_executable(echo_num.cpp other/echo_num.cpp)
add_executable(product.cpp other/product.cpp)
add_executable(sum.cpp other/sum.cpp)

add_executable(201.cpp ./200/201.cpp)
add_executable(202.cpp ./200/202.cpp)
add_executable(203.cpp ./200/203.cpp)
add_executable(204.cpp ./200/204.cpp)
add_executable(205.cpp ./200/205.cpp)
add_executable(206.cpp ./200/206.cpp)
add_executable(207.cpp ./200/207.cpp)
add_executable(208.cpp ./200/208.cpp)
add_executable(209.cpp ./200/209.cpp)
add_executable(210.cpp ./200/210.cpp)
add_executable(301.cpp ./300/301.cpp)
add_executable(302.cpp ./300/302.cpp)
add_executable(303.cpp ./300/303.cpp)
add_executable(304.cpp ./300/304.cpp)
add_executable(305.cpp ./300/305.cpp)
add_executable(306.cpp ./300/306.cpp)
add_executable(307.cpp ./300/307.cpp)
add_executable(311.cpp ./300/311.cpp)
add_executable(312.cpp ./300/312.cpp)
add_executable(314.cpp ./300/314.cpp)
add_executable(315.cpp ./300/315.cpp)
add_executable(316.cpp ./300/316.cpp)
