cmake_minimum_required(VERSION 3.22)
project(cpp)
set(CMAKE_CXX_STANDARD 98)

add_executable(main.cpp ./000/main.cpp)
add_executable(201.cpp ./200/201.cpp)
add_executable(202.cpp ./200/202.cpp)
add_executable(203.cpp ./200/203.cpp)
add_executable(204.cpp ./200/204.cpp)
add_executable(205.cpp ./200/205.cpp)
add_executable(206.cpp ./200/206.cpp)
add_executable(207.cpp ./200/207.cpp)
add_executable(208.cpp ./200/208.cpp)
add_executable(209.cpp ./200/209.cpp)
add_executable(210.cpp ./200/210.cpp)
add_executable(301.cpp ./300/301.cpp)
add_executable(302.cpp ./300/302.cpp)
add_executable(303.cpp ./300/303.cpp)
add_executable(304.cpp ./300/304.cpp)
add_executable(305.cpp ./300/305.cpp)
add_executable(306.cpp ./300/306.cpp)
add_executable(307.cpp ./300/307.cpp)
add_executable(308.cpp ./300/308.cpp)
add_executable(309.cpp ./300/309.cpp)
add_executable(310.cpp ./300/310.cpp)
add_executable(311.cpp ./300/311.cpp)
add_executable(312.cpp ./300/312.cpp)
add_executable(314.cpp ./300/314.cpp)
add_executable(315.cpp ./300/315.cpp)
add_executable(316.cpp ./300/316.cpp)
add_executable(317.cpp ./300/317.cpp)
add_executable(318.cpp ./300/318.cpp)
add_executable(319.cpp ./300/319.cpp)
add_executable(320.cpp ./300/320.cpp)
add_executable(321.cpp ./300/321.cpp)
add_executable(322.cpp ./300/322.cpp)
add_executable(323.cpp ./300/323.cpp)
add_executable(324.cpp ./300/324.cpp)
add_executable(325.cpp ./300/325.cpp)
add_executable(401.cpp ./400/401.cpp)
add_executable(402.cpp ./400/402.cpp)
add_executable(403.cpp ./400/403.cpp)
add_executable(404.cpp ./400/404.cpp)
add_executable(405.cpp ./400/405.cpp)
add_executable(406.cpp ./400/406.cpp)
add_executable(407.cpp ./400/407.cpp)
add_executable(408.cpp ./400/408.cpp)
add_executable(409_2.cpp ./400/409_2.cpp)
add_executable(409.cpp ./400/409.cpp)
add_executable(410.cpp ./400/410.cpp)
add_executable(411.cpp ./400/411.cpp)
